--- a/miniprogram/pages/questionBank/viewInterviewQuestion/viewInterviewQuestion.wxml
+++ b/miniprogram/pages/questionBank/viewInterviewQuestion/viewInterviewQuestion.wxml
@@ -59,7 +59,24 @@
 			<view class="radio-question">
 				<view class="quetion-title">
 					<text style="font-size: 36rpx;" >{{bank.questions[questionIndex].id}}. {{bank.questions[questionIndex].title}}</text>
-					<text wx:if="{{bank.questionsFileArry[0].tempFilePaths.length > 0}}" id="{{bank.questions[questionIndex].id}}" bindtap="handleAudioPlay" style="font-size: 48rpx;" class="cuIcon-notificationfill text-yellow"></text>
+										<view wx:if="{{questionsFileArry.length > 0}}"  class="audio-play">
+						<view wx:if="{{audioPlay === 'init'}}" bindtap="play" >
+							<text class="cuIcon-notificationfill text-yellow">
+							</text>
+						</view>
+						<view wx:if="{{audioPlay === 'play'}}" bindtap="stop">
+							<text class="cuIcon-notificationfill text-yellow">
+							</text>
+							<text class="cuIcon-stop text-yellow">
+							</text>
+						</view>
+						<view wx:if="{{audioPlay === 'pause'}}" bindtap="play" >
+							<text class="cuIcon-notificationfill text-yellow">
+							</text>
+							<text class="cuIcon-playfill text-yellow">
+							</text>
+						</view>
+					</view>
 				</view>
 				<view class="correct-analyse">
 					<view wx:if="{{bank.questions[questionIndex].analyse}}">解析：\n{{bank.questions[questionIndex].analyse}}</view>
