--- a/miniprogram/pages/home/examInterview/examInterview.wxss
+++ b/miniprogram/pages/home/examInterview/examInterview.wxss
@@ -2,7 +2,27 @@
 page {
   background: white;
 }
-
+.bank-title {
+  margin-left: 34rpx;
+  padding-top: 42rpx;
+  color: rgba(16, 16, 16, 1);
+  font-size: 50rpx;
+  text-align: left;
+  font-family: PingFangSC-regular;
+  width: 85vw;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+}
+.score-time {
+  margin-left: 34rpx;
+  margin-top: 1vh;
+  margin-bottom: 30rpx;
+  color: rgba(16, 16, 16, 1);
+  font-size: 28rpx;
+  text-align: left;
+  font-family: PingFangSC-regular;
+}
 .txt1{
   position: absolute;
   left: 34rpx;
