--- a/miniprogram/pages/questionBank/viewQuestions/viewQuestions.wxss
+++ b/miniprogram/pages/questionBank/viewQuestions/viewQuestions.wxss
@@ -28,7 +28,9 @@ scroll-view{
   width: 83vw;
   text-overflow: ellipsis;
   overflow: hidden;
-  white-space: nowrap;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
 }
 
 .line {
