--- a/miniprogram/pages/home/endInterview/endInterview.wxml
+++ b/miniprogram/pages/home/endInterview/endInterview.wxml
@@ -49,6 +49,6 @@
 </view>
 <view class="btns">
 	<button class="allExam" bindtap="viewAll">查看完整试卷 </button>
-	<button class="questiobBank" bindtap="toIndex">返回题库</button>
+	<button class="questiobBank" bindtap="toIndex">返回首页</button>
 </view>
 
